--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: minima
-title: My Page
-author: Me
-description: this is a test page
+title: "My Page"
+author: "Me
+description: "this is a test page"
